password regex otp new

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 JWT_SECRET_KEY = HJDHJDHJHJJJjhjhjhkhjhk
 TWILIO_SID = 'AC21c22aca8f253306d42cfd0645b088aa'
 TWILIO_AUTH_TOKEN = 'd82e3f7eccd2f104787fd8027a2a910f' 
+TWILIO_VERIFY='VA76835a83846569e18bf716191e09357e'
